https://gitlab.com/plvr/ndm/ndm-project/-/issues/332 - Updated the Meta description tag, - updated the html title, - Fixed the rate per night. It was showing up in the thousands., - Fixed css on the Destination PackageTile, - Added an Image Carousel to the DestinationPackageTile, - Changed some stuff up on the Itinerary Info Card, - Updated the LabelInput to have other types, - Made the Reservation Accordion mobile friendly, - Added Upsell Packages to the ReservationDetailsAccordion, - Removed the reservation.model.ts folder. (I changed the getByPaged endpoint), - Made the EditExistingServicesPage, - Removed the "I Agree with the privacy terms and booking conditions, - Misc site clean ups, - Added carousel to reservationCard

--- a/src/pages/editExistingPackagesPage/EditExistingPackagesPage.scss
+++ b/src/pages/editExistingPackagesPage/EditExistingPackagesPage.scss
@@ -1,5 +1,5 @@
 @import '../../themes/themes';
-.rsEditExistingServicesPage {
+.rsEditExistingPackagesPage {
 	.rs-page-content-wrapper {
 		max-width: 1160px !important;
 		padding-top: 120px;
@@ -42,7 +42,7 @@
 }
 
 .small {
-	.rsEditExistingServicesPage {
+	.rsEditExistingPackagesPage {
 		.rs-page-content-wrapper {
 			padding: 80px 10px 0;
 			.rsBox:first-of-type {
